resources/assets/sass/_custom.scss
@import "~bootstrap-tagsinput/dist/bootstrap-tagsinput.css";
@import "~nutrition-label-jquery-plugin/dist/css/nutritionLabel-min.css";
@import "~vue-toastr/src/vue-toastr.scss";

@font-face {
  font-family: gotham;
  src: url(fonts/gotham.otf);
}

@font-face {
  font-family: gotham-condensed;
  src: url(fonts/gotham-condensed.otf);
}

@font-face {
  font-family: gotham-narrow;
  src: url(fonts/gotham-narrow.otf);
}

@font-face {
  font-family: gotham-bold;
  src: url(fonts/gotham-bold.ttf);
}

@font-face {
  font-family: gotham-black;
  src: url(fonts/gotham-black.otf);
}

@font-face {
  font-family: gotham-medium;
  src: url(fonts/gotham-medium.ttf);
}

p, td, li, label, input, button, b-button, textarea, legend, label, select, .alert, div {
	font-family: 'gotham-narrow';
	font-size:15px;
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'gotham' !important;
	font-weight: bold;
}

li {
  list-style-type: none;
}


/*Nav Area*/

.navbar {
  -webkit-box-shadow: 0 1px 8px rgba(0, 0, 0, .35) !important;
  background-color:#ffffff;
  border-bottom:0px;
}
.navbar-nav {
  .nav-link {
    margin-bottom: 0;
  }
}

.nav-link{
	margin-bottom:10px;
	font-family: 'gotham';
	font-size: 14px;
	font-weight: 300;
	line-height: 25px;
}

.nav .nav-child{
	background-color:#33383b !important;
}

.dropdown-toggle::after{
  display:none !important;
}

.custom-select {
  width: 100px !important;

  &.w-100 {
    width: 100% !important;
  }
}

.delivery-select {
  width: 180px !important;
}

.bag-select{
  width: 100% !important;
}

.nav-tabs .nav-item .nav-link{
  background-color:#f1f1f1 !important;
}

.open-indicator {
  margin-right: 8px !important;
}

/*Sidebar*/
body:not(.sidebar-minimized) {
  .sidebar {
    width: 200px !important;
  }
}

body.sidebar-minimized {
  .sidebar {
    .nav-item {

      .nav-link {
        padding-left: 7px;
        padding-right: 7px;
        white-space: nowrap; 
        overflow: hidden;
        text-overflow: ellipsis;

        .nav-icon {
          margin-left: -7px;
        }
      }
    }
  }
}


/*Main*/

.main .container-fluid {
  margin-top:20px;

  @include media-breakpoint-down(xs) {
    padding-left: 15px;
    padding-right: 15px;
  }
}

.card {
  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .05) !important;
  border-radius: 12px !important;
}

.alert {
	margin-top:10px
}

.meal-quantities {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  margin-left: -5px;
  margin-right: -5px;

  li {
    flex: 0 1 calc(50% - 10px);
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 5px;
    min-height: 2em;
  }
}

.modalMeal{
  height:80px;
  width:80px;
}

.modal-title{
	font-size:30px;
}

.order-quantity{
  font-size:17px;
  color:#838181;
  position:relative;
  top:2px;
}

.label-info {
  background-color: #28a745;
  border-radius: 5px;
  padding: 3px;
}

.faded {
  opacity: 0.5;
}

.VuePagination {
  text-align: center;
}

.vue-title {
  text-align: center;
  margin-bottom: 10px;
}

.vue-pagination-ad {
  text-align: center;
}

.glyphicon.glyphicon-eye-open {
  width: 16px;
  display: block;
  margin: 0 auto;
}

.thumb {
  max-width: 150px;
}

.picture-input {
  .preview-container {
  }
}

.filters .btn-secondary{
  background-color:#ffffff !important;
  margin-right:5px !important;
}

.filters .active{
  background-color:#F0592E !important;
  color:#ffffff !important;
  border-color:#dedede !important;
}

.filters .focus, .focus{
  box-shadow: 0 0 0 0.0rem !important;
}

.nf-ingredientListDiv{
  line-height:1em;
}

/*Menu*/

.main-menu-area, .bag-area{
  overflow-y: auto;

  @include media-breakpoint-up(md) {
    height: calc(100vh - 210px);
  }
}

.main-menu-area {
  @include media-breakpoint-down(sm) {
    //margin-bottom: 160px;
  }
}

.bag-area {
  padding-top: 75px;
  
  @include media-breakpoint-down(sm) {
    padding-top: 8px;
    padding-bottom: 8px;
    /*
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background: #fff;
    padding-top: 8px;
    padding-bottom: 8px;*/
  }
  
  @include media-breakpoint-down(md) {
   .bag-item-image {
     display: none;
   } 
  }
}

.quantity {
  border-radius: 10px;
  opacity: 0.5;
  text-align: center;
}


.menu-item {
  margin-bottom: 10px;
}

.menu-item-img {
  width: 100%;
}

.cart-item{
    width:100%;
}

.cart-item-img {
  height: 80px;
  width: 80px;
}

.bag-item-img{
	height:100px;
}

.modal-meal-image img{
  width:100% !important;
}

.modal-meal-image-full img{
  width:300px !important;
}

.ingredient-img{
  width: 50px !important;
}

.quantity {
  width: 115px;
  border-radius: 20px;
  opacity: 0.5;
  text-align: center;
}

.categories{
  padding-top:20px
}

.menu, .bag {
  max-width: 1700px
}

.bag-actions {
  @include media-breakpoint-down(sm) {
    .btn {
      font-size: 13px;
    }
  }
}

.checkout-item{
  border-bottom:1px solid #e1e1e1;
  margin-bottom:10px;
  width:100%;
  height:50px;
}

.bag-item{
  border-bottom:1px solid #e1e1e1;
  margin-bottom:10px;
  width:100%;
}

.bag-quantity{
text-align:center;
vertical-align: center;
position:relative;
top:10px;
}

.clear-meal{
  width:10px;
}

.filters ul{
  display:inline
} 


.store-logo-area{
  height:140px !important;
  display: flex;
  justify-content: center;
}

.category-area{
  height:45px !important;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid #D3D3D3;
  border-bottom: 1px solid #D3D3D3;
  margin:20px 0px!important;

  ul {
    display:flex;
    flex: 1;
    justify-content: center;
    align-items:center !important;
    align-content:center !important;
    padding: 0;
    margin: 0;

    @include media-breakpoint-down(sm) {
      display: none;
    }
  }

  > div {
    @include media-breakpoint-up(md) {
      flex: 0 0 190px;
    }
    @include media-breakpoint-up(lg) {
      flex: 0 0 210px;
    }
  }
}

.category-area ul li{
  font-size:18px;
  font-weight:bold;
  margin-left: 18px;
  margin-right: 18px;
}

.category-area ul li:hover{
  cursor:pointer !important;
}

.dbl-underline {
  padding-bottom: 8px !important;
  font-family:'gotham-medium' !important;
  position: relative;

  &:after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    border-bottom: 3px double #F25727;
    width: 90px;
  }
}

.filter-area{
  position:sticky !important;
}

.dropdown-item {
  text-decoration: none !important;
}

.light-background{
  background-color:#F9F9F9 !important;
}

.modal-body{
  margin-top:0px !important;
  padding-top:0px !important;
}

.border-bottom{
  border-bottom: 1px solid #E4E7EA !important
}

.modal-title{
  display: block; 
  margin: 0 auto;
}

.largeCheckbox {
-ms-transform: scale(1.6); /* IE */
  -moz-transform: scale(1.6); /* FF */
  -webkit-transform: scale(1.6); /* Safari and Chrome */
  -o-transform: scale(1.6); /* Opera */
  padding: 30px 0px 0px 60px;
}

.switch-slider{
  height:20px !important;
  border:1px solid #CBD1D5 !important;
}


.switch-slider::before{
  border:1px solid #CBD1D5 !important;
  height:15px !important;

}

.contact-subject{
  width: 100% !important;
  max-width: 300px !important;
}

.nutritionix{
 width:238px !important;
 height:45px !important; 
}

.popover-size{
  width:20px !important;
  height:20px !important;
}

.menu-bag-btn{
  background-color:#F25727 !important;
  width:100% !important;
  height:50px !important;
  color:#ffffff !important;
  font-size:20px !important;
  font-weight:bold !important;
}

.menu-bag-btn a{
  color:#ffffff !important;
  text-decoration:none !important;
}

.plus-minus{
  width:42px !important;
  height:42px !important;
  padding: 0;
  text-align: center;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.plus-minus i{
  font-size:35px !important;
  line-height:1em;
  position:relative !important;
  font-style: normal;
}

.gray{
  background-color:#A7A7A7 !important;
}

.bag-plus-minus{
  width:15px !important;
  height:15px !important;
}

.store-logo{
  width:140px !important;
  height:140px !important;
}

.nf-vitamin-column:first-child{
  display:none !important;
}

//Change
.report-date-picker .delivery-date-picker{
  position:relative !important;
  left:170px !important;
}

// .nf-arrows, .nf-modifier-field, .nf-unitQuantityBox{
//   display:none !important;
// } 

/*Vue Tables 2*/

tr{
  line-height: 38px;
}

th:first-child{
  border-top-left-radius:7px;
}

th:last-child{
  border-top-right-radius:7px;
}

.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
   background-color: #f9f9f9;
}

th {
	font-family: 'gotham';
	font-size: 14px;
	font-weight: 600;
}


/*Helper*/

.link-remove {
  color:#000000;
  text-decoration: none !important;
}

.center-text {
  text-align:center;
}

.center{
  display: block; 
  margin: 0 auto;
}

.sidebar .nav-link {
  &.router-link-exact-active {
    color: #fff;
    background: #384550;

    .nav-icon {
      color: #20a8d8;
    }
  }
}

.header-fixed {
  .app-header {
    z-index: 10010;

    .navbar {

    }
  }
}

.navbar .nav-item:not(.dropdown) {
  padding-left: 0;
  padding-right: 0;
  
  .nav-link {
    position: relative;
    transition: all 0.3s ease-in-out 0s;
    padding: 15px 1rem;

    &:after {
      content: "";
      position: absolute;
      height: 1px;
      bottom: -1px;
      left: 0;
      right: 0;
      //background-color: #888888;
      -webkit-box-shadow: 0px -1px 2px 0px #7cc039;
      box-shadow: 0px -1px 2px 0px #7cc039;
      visibility: hidden;
      -webkit-transform: scaleX(0);
      transform: scaleX(0);
      -webkit-transition: all 0.22s ease-in-out 0s;
      transition: all 0.22s ease-in-out 0s;
      //opacity: 0.4;
    }

    &:hover {
      &:after {
        visibility: visible;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
      }
    }

    &.active {
      font-weight: bolder;
      background-color: #eef3f7;
    }
  }
}


ol.plain {
  list-style: decimal;
  padding-inline-start: 10px;
  
  li {
    list-style: decimal;
    padding-left: 10px;
  }
}

.strong {
  font-weight:bold;
}

 .StripeElement {
  background-color: white;
  height: 40px;
  padding: 10px 12px;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 1px 3px 0 #e6ebf1;
  -webkit-transition: box-shadow 150ms ease;
  transition: box-shadow 150ms ease;
}

.StripeElement--focus {
  box-shadow: 0 1px 3px 0 #cfd7df;
}

.StripeElement--invalid {
  border-color: #fa755a;
}

.StripeElement--webkit-autofill {
  background-color: #fefde5 !important;
}

.red{
  color:#ff0000 !important;
}

.auth-box{
  padding-top:10% !important;
}

.btn-warning{
  color:#ffffff !important;
  background-color:#ffb007 !important;
}

.featured{
  font-size:18px !important;
}

.orange{
  background-color:#F25727 !important;
  color:#ffffff !important;
}

.green{
  background-color:#79C036 !important;
  color:#ffffff !important;
}

.d-flex > *, .d-inline-flex > * {
  &.flex-shrink-1 {
    flex-shrink: 1 !important;
  }
  &.flex-grow-1 {
    flex-grow: 1 !important;
  }
  &.flex-grow-0 {
    flex-grow: 0 !important;
  }
}
.align-right{
  display:flex !important;
  justify-content: flex-end !important;
}

table { 
  width: 100%; 
}

